# logos

./: LICENSE  README.md  precheck.sh  pyproject.toml  test_prompt.txt  tools.py
logos/: bot.py  cli.py  listener.py  safety_checks.py  serializers.py  stubs.py  tools.py
src/: cli.py
