[project]
name = "ollama-assistant"
version = "0.1.0"
description = "Experiment in tool use and LLM based user interface"
authors = [
    {name = "Ellie Pratt",email = "ellie@skfl.tech"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)",
    "rich (>=14.3.4,<15.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "logos", format = ["sdist"] }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.10"
ty = "^0.0.30"

[tool.poetry.scripts]
logos = "logos.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "F",   # Pyflakes rules
    "W",   # PyCodeStyle warnings
    "E",   # PyCodeStyle errors
    "I",   # Sort imports properly
    "UP",  # Warn if certain things can changed due to newer Python versions
    "C4",  # Catch incorrect use of comprehensions, dict, list, etc
    "FA",  # Enforce from __future__ import annotations
    "ISC", # Good use of string concatenation
    "ICN", # Use common import conventions
    "RET", # Good return practices
    "SIM", # Common simplification rules
    "TID", # Some good import practices
    "TC",  # Enforce importing certain types in a TYPE_CHECKING block
    "PTH", # Use pathlib instead of os.path
    "TD",  # Be diligent with TODO comments
    "NPY", # Some numpy-specific things
    "COM", # enforce trailing comma rules
    "DTZ", # require strict timezone manipulation with datetime
    "FBT", # detect boolean traps
    "N",   # enforce naming conventions, e.g. ClassName vs function_name
]
ignore = [
    "TD002",  # For now there's only one developer.
    "TD003",  # For now there's no need to file issues for every TODO.
    "COM812", # I like trailing commas for consistency.
]
